@@ -40,9 +40,9 @@ class Mechanize::CookieJar
     domains = @jar.find_all { |domain, _|
       cookie_domain = self.class.strip_port(domain)
       if cookie_domain.start_with?('.')
-        url.host =~ /#{cookie_domain}$/i
+        url.host =~ /#{Regexp.escape cookie_domain}$/i
       else
-        url.host =~ /^#{cookie_domain}$/i
+        url.host =~ /^#{Regexp.escape cookie_domain}$/i
       end
     }
 
